Add endpoints for user service